# slopcheck

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
slopcheck/: cli.py  render.py  scorer.py
slopcheck/data/: phrase_bank.json
slopcheck/signals/: lexical.py  phrases.py  punctuation.py  rhythm.py  structure.py
tests/: test_cli.py  test_lexical.py  test_phrases.py  test_punctuation.py  test_render.py  test_rhythm.py  test_scorer.py  test_structure.py  validate_corpus.py
tests/corpus/ai/: ai_blog.txt  ai_conclusion.txt  ai_guide.txt  ai_intro.txt  ai_marketing.txt  ai_newsletter.txt  ai_overview.txt  ai_reflection.txt  ai_report.txt  ai_summary.txt
tests/corpus/human/: blog_post.txt  code_review.txt  debugging_log.txt  email_casual.txt  journal_entry.txt  meeting_minutes.txt  recipe_log.txt  slack_message.txt  tech_notes.txt  travel_snippet.txt
tests/fixtures/: sample_ai.txt  sample_human.txt
