[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slopcheck"
version = "0.1.0"
description = "A zero-dependency AI-writing signature detector tool"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
slopcheck = "slopcheck.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["slopcheck", "slopcheck.*"]
exclude = ["data*", "tests*", ".github*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.3.0",
]
