[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slopcheck-cli"
version = "0.1.3"
description = "Zero-GPU, zero-API heuristic AI-writing detector"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
slopcheck = "slopcheck.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.3.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["slopcheck", "slopcheck.*"]
exclude = ["tests*", ".github*"]

# ADD THIS SECTION: Tells setuptools to bundle any JSON files inside slopcheck
[tool.setuptools.package-data]
"slopcheck" = ["*.json", "**/*.json", "data/*.json"]